--- a/Thesis/AndroidManifest.xml
+++ b/Thesis/AndroidManifest.xml
@@ -24,12 +24,23 @@
     <uses-permission android:name="android.permission.GET_TASKS" />
     <uses-permission android:name="android.permission.READ_LOGS" />
     <uses-permission android:name="android.permission.VIBRATE" />
-    
+    <uses-permission android:name="android.permission.RUN_INSTRUMENTATION" />
+
+    <!-- 单元测试 -->
+    <instrumentation
+        android:name="android.test.InstrumentationTestRunner"
+        android:label="Test for my app"
+        android:targetPackage="com.jnu.thesis" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:theme="@style/mystyle" >
+
+        <!-- 单元测试 -->
+        <uses-library android:name="android.test.runner" />
+
         <activity
             android:name="com.jnu.thesis.activity.MainActivity"
             android:label="毕业论文指导系统" >
@@ -134,4 +145,5 @@
             android:name="XG_V2_ACCESS_KEY"
             android:value="AN3N5M94ZA8J" />
     </application>
+
 </manifest>
