--- a/Thesis/AndroidManifest.xml
+++ b/Thesis/AndroidManifest.xml
@@ -41,14 +41,16 @@
         <!-- 单元测试 -->
         <uses-library android:name="android.test.runner" />
 
-        <activity
-            android:name="com.jnu.thesis.activity.MainActivity"
-            android:label="毕业论文指导系统" >
+        <activity android:name="com.jnu.thesis.activity.LoginActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.jnu.thesis.activity.MainActivity"
+            android:label="毕业论文指导系统" >
         </activity>
 
         <!-- 【必须】 (2.30及以上版新增)展示通知的activity -->
@@ -115,14 +117,14 @@
         <!--
             <service
             android:name="com.tencent.android.tpush.service.XGDaemonService"
-            android:process=":qq_push_daemon" />
+            android:process=":qq_push_daemon" />
         -->
         <!-- 【可选】信鸽拉起其他APP应用，若应用在本地找不到可以自动下载 -->
         <!--
               <service
             android:name="com.tencent.android.tpush.XGDownloadService"
             android:enabled="true"
-            android:exported="false" />
+            android:exported="false" />
         -->
         <!-- 【可选】APP实现的Receiver，用于接收消息透传和操作结果的回调，请根据需要添加 -->
         <!-- YOUR_PACKAGE_PATH.CustomPushReceiver需要改为自己的Receiver： -->
