--- a/Thesis/AndroidManifest.xml
+++ b/Thesis/AndroidManifest.xml
@@ -41,7 +41,7 @@
         <!-- 单元测试 -->
         <uses-library android:name="android.test.runner" />
 
-        <activity android:name="com.jnu.thesis.activity.LoginActivity" >
+        <activity android:name=".activity.LoginActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -49,7 +49,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.jnu.thesis.activity.MainActivity"
+            android:name=".activity.MainActivity"
             android:label="毕业论文指导系统" >
         </activity>
 
@@ -117,14 +117,14 @@
         <!--
             <service
             android:name="com.tencent.android.tpush.service.XGDaemonService"
-            android:process=":qq_push_daemon" />
+            android:process=":qq_push_daemon" />
         -->
         <!-- 【可选】信鸽拉起其他APP应用，若应用在本地找不到可以自动下载 -->
         <!--
               <service
             android:name="com.tencent.android.tpush.XGDownloadService"
             android:enabled="true"
-            android:exported="false" />
+            android:exported="false" />
         -->
         <!-- 【可选】APP实现的Receiver，用于接收消息透传和操作结果的回调，请根据需要添加 -->
         <!-- YOUR_PACKAGE_PATH.CustomPushReceiver需要改为自己的Receiver： -->
@@ -146,6 +146,7 @@
         <meta-data
             android:name="XG_V2_ACCESS_KEY"
             android:value="AN3N5M94ZA8J" />
+
     </application>
 
 </manifest>
