1. 调整UI, 全部换上自定义的adapter. 2. ChecBox别用OnCheckedListener, 随便划一下就调用, 用OnClickListener就好.

--- a/Thesis/AndroidManifest.xml
+++ b/Thesis/AndroidManifest.xml
@@ -152,7 +152,7 @@
             android:label="@string/title_activity_teacher_main" >
         </activity>
         <activity
-            android:name=".SelectStudentActivity"
+            android:name="com.jnu.thesis.activity.SelectStudentActivity"
             android:label="@string/title_activity_select_student" >
         </activity>
     </application>
