1. 把接口改掉, 学生登录之后再获取论文数据, 同时获取自己所选的论文 2. 论文fragment UI略改动 3. HttpUtil略改动, 加错误输出到日志

--- a/Thesis/AndroidManifest.xml
+++ b/Thesis/AndroidManifest.xml
@@ -41,7 +41,9 @@
         <!-- 单元测试 -->
         <uses-library android:name="android.test.runner" />
 
-        <activity android:name=".activity.LoginActivity" >
+        <activity
+            android:name=".activity.LoginActivity"
+            android:finishOnTaskLaunch="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -118,14 +120,14 @@
         <!--
             <service
             android:name="com.tencent.android.tpush.service.XGDaemonService"
-            android:process=":qq_push_daemon" />
+            android:process=":qq_push_daemon" />
         -->
         <!-- 【可选】信鸽拉起其他APP应用，若应用在本地找不到可以自动下载 -->
         <!--
               <service
             android:name="com.tencent.android.tpush.XGDownloadService"
             android:enabled="true"
-            android:exported="false" />
+            android:exported="false" />
         -->
         <!-- 【可选】APP实现的Receiver，用于接收消息透传和操作结果的回调，请根据需要添加 -->
         <!-- YOUR_PACKAGE_PATH.CustomPushReceiver需要改为自己的Receiver： -->
